[tool.poetry]
name = "pql"
version = "0.1.0"
description = "Parallel Q Learning"
authors = ["Zechu Li, Tao Chen"]
license = "MIT"
packages = [
    { include = "hydra_plugins" },
]

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
gym = ">=0.26.0"
hydra-core = ">=1.2.0"
loguru = ">=0.6.0"
ray = ">=1.13.0"
wandb = ">=0.13.5"
cloudpickle = ">=2.2.0"
scipy = ">=1.7.3"
shortuuid = ">=1.0.11"
ninja = ">=1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD", "ANN", "INP001", "T201", "BLE001", "RUF012", "B905"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # allow unused variables when underscore-prefixed

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint.extend-per-file-ignores]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
